--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ out/
 
 # Gradle files
 .gradle/
-build/
+build
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -95,3 +95,4 @@ buildSrc
 lib-basic
 solution-ab-api
 solution-bonus-api
+entity-ticket
